--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,11 +1,26 @@
-# Node.js
-
-node_modules/ npm-debug.log .pnpm-debug.log
+# Dependencies
+node_modules/
 
 # Environment variables
-
 .env
 
-# SSL certificates
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-Server/192.168.1.97-key.pem Server/192.168.1.97.pem Server/localhost-key.pem Server/localhost.pem
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.swp
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Certificate files (if you don't want to track them)
+*.pem
